--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,6 @@
 {erl_opts, [debug_info]}.
 
-{deps, [{typerefl, {git, "https://github.com/k32/typerefl.git", {tag, "0.9.0"}}}]}.
+{deps, [{typerefl, {git, "https://gitee.com/fastdgiot/typerefl.git", {tag, "0.9.0"}}}]}.
 
 {xref_checks, [ undefined_function_calls
               , undefined_functions
